deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-orders
  name: ms-orders
  namespace: default 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-orders
  template:
    metadata:
      labels:
        app: ms-orders
    spec:
      containers:
        - image: 794892305647.dkr.ecr.us-east-1.amazonaws.com/orders-service:9_prod
          name: orders-service
          ports:
            - containerPort: 8080
              name: ms-orders 
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
# strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxSurge: 25%
#       maxUnavailable: 25%
#   revisionHistoryLimit: 10
#   progressDeadlineSeconds: 600
#   paused: false
