service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-orders-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: ms-orders
  ports:
  - protocol: TCP
    port: 30005
    targetPort: 8080
    name: default
