ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-ord
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /ms-orders
        backend:
          serviceName: ms-orders-svc
          servicePort: 30005
